Alignment issues fixed

--- a/public/stylesheets/heatmap.css
+++ b/public/stylesheets/heatmap.css
@@ -4,3 +4,14 @@
 	max-width: 800px; 
 	margin: 0 auto;	
 }
+
+#highchart2 {
+	height: 400px;
+	min-width: 310px; 
+	max-width: 800px; 
+	margin: 0 auto;	
+}
+
+#buttongroup {
+	text-align: center;
+}
